8146238: [macosx] Java2D Queue Flusher crash on OSX after switching between user accounts

Reviewed-by: prr, avu